@@ -17,6 +17,7 @@ Slated for 2.21.0
 - Changed: Reflect.createForType(...) can now handing converting Enums to other 
   types.
 - Added: AbstractTrie.clear().
+- Added: HashedHashMap.containsValue(K, V).
 
 Changed in 2.20.2
 =================
